fix aligned image spacings

--- a/static-prototype/assets/sass/components/_author.sass
+++ b/static-prototype/assets/sass/components/_author.sass
@@ -12,4 +12,4 @@
     margin-left: 1rem
     font-weight: $font-weight-semi
     font-size: 0.9rem
-    transform: translateY(1.6rem);
+    transform: translateY(1.6rem)
