--- a/static-prototype/assets/sass/util/_blocks.sass
+++ b/static-prototype/assets/sass/util/_blocks.sass
@@ -1,5 +1,5 @@
-.image-right,
-.alignright
+// override wp styles with double selectors
+.alignright.alignright
   position: relative
   float: right
   padding: 0em
@@ -11,11 +11,9 @@
       width: 100%
       height: auto
   @media (min-width: $break-medium)
-    right: -3rem
-    margin-left: 0
+    margin-right: -2em
   @media (min-width: $break-large)
-    right: -8rem
-    margin-left: 0
+    margin-right: -8em
 
 .image-right--float
   @media (min-width: ($break-ml + 40px))
@@ -43,8 +41,8 @@
   &.wp-block-image
     max-width: none
 
-.image-left,
-.alignleft
+// override wp styles with double selectors
+.alignleft.alignleft
   position: relative
   float: left
   padding: 0em
@@ -56,10 +54,9 @@
       width: 100%
       height: auto
   @media (min-width: $break-medium)
-    left: -2rem
-    margin-right: 0
+    margin-left: -2em
   @media (min-width: $break-large)
-    left: -5rem
+    margin-left: -8em
 
 
 .clip-alpaka
